--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-water-wave": "^2.0.1",
     "tailwind-merge": "^2.5.5"
+  },
+  "packageManager": "npm@10.5.2",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
