--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "moment-timezone": "^0.5.46",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
