--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
     "moment-timezone": "^0.5.46",
     "next": "15.1.0",
     "react": "^19.0.0",
